--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,6 @@
 [[plugins]]
-package = "netlify-plugin-sitemap"
+package = "@netlify/plugin-sitemap"
+
+  [plugins.inputs]
+  buildDir = "./"
+  filePath = "./sitemap.xml"
