--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@ package = "@netlify/plugin-sitemap"
   [plugins.inputs]
   buildDir = "./"
   filePath = "./sitemap.xml"
+
+[[redirects]]
+  from = "https://altawasol.netlify.app/*"
+  to = "https://altawasolclean.com/:splat"
+  status = 301
+  force = true
